--- a/Find One/Module/Home/home/Cell/FeatureCollectionViewCell.xib
+++ b/Find One/Module/Home/home/Cell/FeatureCollectionViewCell.xib
@@ -31,7 +31,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="7pR-KI-uDl">
                                 <rect key="frame" x="2" y="2" width="171" height="213"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SEG-z5-V8T">
+                                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SEG-z5-V8T">
                                         <rect key="frame" x="0.0" y="0.0" width="171" height="155"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo (1)" translatesAutoresizingMaskIntoConstraints="NO" id="LnJ-wR-LeF">
