--- a/Find One/Module/Home/home/Cell/SustainableCollectionViewCell.xib
+++ b/Find One/Module/Home/home/Cell/SustainableCollectionViewCell.xib
@@ -26,16 +26,16 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g85-pt-1hU">
-                        <rect key="frame" x="0.0" y="0.0" width="175" height="175"/>
+                        <rect key="frame" x="2" y="0.0" width="171" height="175"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hOm-IK-XBx">
-                                <rect key="frame" x="2" y="2" width="171" height="158"/>
+                                <rect key="frame" x="2" y="4" width="167" height="156"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cfl-QY-oB1">
-                                        <rect key="frame" x="0.0" y="0.0" width="171" height="125"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="167" height="125"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo (1)" translatesAutoresizingMaskIntoConstraints="NO" id="BoB-SW-uJ7">
-                                                <rect key="frame" x="0.0" y="0.0" width="171" height="125"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="167" height="125"/>
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -48,16 +48,16 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2ac-6T-OK1">
-                                        <rect key="frame" x="0.0" y="125" width="171" height="33"/>
+                                        <rect key="frame" x="0.0" y="125" width="167" height="31"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="F0f-eT-8lT">
-                                                <rect key="frame" x="5" y="0.0" width="161" height="33"/>
+                                                <rect key="frame" x="5" y="0.0" width="157" height="31"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JJ7-5M-tDT">
-                                                        <rect key="frame" x="0.0" y="0.0" width="161" height="25"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="157" height="25"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nes-o3-0QC">
-                                                                <rect key="frame" x="0.0" y="0.0" width="161" height="25"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="157" height="25"/>
                                                                 <subviews>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="68D-Up-Kma">
                                                                         <rect key="frame" x="0.0" y="0.0" width="104.66666666666667" height="25"/>
@@ -94,10 +94,10 @@
                                                                         </constraints>
                                                                     </view>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zqk-e4-u9D">
-                                                                        <rect key="frame" x="119.66666666666667" y="0.0" width="41.333333333333329" height="25"/>
+                                                                        <rect key="frame" x="119.66666666666664" y="0.0" width="37.333333333333329" height="25"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(4)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mod-vS-Rua">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="25"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="37.333333333333336" height="25"/>
                                                                                 <fontDescription key="fontDescription" name="Manrope-Semibold" family="Manrope" pointSize="10"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -125,22 +125,22 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zim-2h-18b">
-                                                        <rect key="frame" x="0.0" y="28" width="161" height="5"/>
+                                                        <rect key="frame" x="0.0" y="28" width="157" height="3"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="zFX-Nf-Ryz">
-                                                                <rect key="frame" x="0.0" y="0.0" width="161" height="5"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="157" height="3"/>
                                                                 <subviews>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DFY-RN-Pfl">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="161" height="5"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="157" height="3"/>
                                                                         <subviews>
                                                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="aHB-Ok-vml">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="161" height="5"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="157" height="3"/>
                                                                                 <subviews>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qbs-AG-bFH">
-                                                                                        <rect key="frame" x="0.0" y="0.0" width="19" height="5"/>
+                                                                                        <rect key="frame" x="0.0" y="0.0" width="19" height="3"/>
                                                                                         <subviews>
                                                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sustainable" translatesAutoresizingMaskIntoConstraints="NO" id="mkc-Ug-gvW">
-                                                                                                <rect key="frame" x="0.0" y="-7" width="19" height="19"/>
+                                                                                                <rect key="frame" x="0.0" y="-8" width="19" height="19"/>
                                                                                                 <constraints>
                                                                                                     <constraint firstAttribute="width" secondItem="mkc-Ug-gvW" secondAttribute="height" multiplier="1:1" id="WBT-kM-txJ"/>
                                                                                                 </constraints>
@@ -156,10 +156,10 @@
                                                                                         </constraints>
                                                                                     </view>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Huk-yn-xkT">
-                                                                                        <rect key="frame" x="24" y="0.0" width="137" height="5"/>
+                                                                                        <rect key="frame" x="24" y="0.0" width="133" height="3"/>
                                                                                         <subviews>
                                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="97% Sustainable Institute" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tR6-fe-4oN">
-                                                                                                <rect key="frame" x="0.0" y="-4.3333333333333428" width="120.33333333333333" height="14"/>
+                                                                                                <rect key="frame" x="0.0" y="-5.3333333333333428" width="120.33333333333333" height="14"/>
                                                                                                 <fontDescription key="fontDescription" name="Outfit-Medium" family="Outfit" pointSize="11"/>
                                                                                                 <color key="textColor" red="0.44705882352941173" green="0.70980392156862748" blue="0.30196078431372547" alpha="1" colorSpace="calibratedRGB"/>
                                                                                                 <nil key="highlightedColor"/>
@@ -209,7 +209,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="hOm-IK-XBx" firstAttribute="top" secondItem="g85-pt-1hU" secondAttribute="top" constant="2" id="LNq-lV-UKc"/>
+                            <constraint firstItem="hOm-IK-XBx" firstAttribute="top" secondItem="g85-pt-1hU" secondAttribute="top" constant="4" id="LNq-lV-UKc"/>
                             <constraint firstAttribute="trailing" secondItem="hOm-IK-XBx" secondAttribute="trailing" constant="2" id="a0u-ds-JwT"/>
                             <constraint firstAttribute="bottom" secondItem="hOm-IK-XBx" secondAttribute="bottom" constant="15" id="mR5-LU-wwU"/>
                             <constraint firstItem="hOm-IK-XBx" firstAttribute="leading" secondItem="g85-pt-1hU" secondAttribute="leading" constant="2" id="mcp-R1-z4c"/>
@@ -226,9 +226,9 @@
             <viewLayoutGuide key="safeArea" id="zhe-d5-Jbx"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="g85-pt-1hU" firstAttribute="leading" secondItem="VdF-66-v6A" secondAttribute="leading" id="Fc1-fH-dUI"/>
+                <constraint firstItem="g85-pt-1hU" firstAttribute="leading" secondItem="VdF-66-v6A" secondAttribute="leading" constant="2" id="Fc1-fH-dUI"/>
                 <constraint firstItem="g85-pt-1hU" firstAttribute="top" secondItem="VdF-66-v6A" secondAttribute="top" id="Xnp-Bt-WXX"/>
-                <constraint firstAttribute="trailing" secondItem="g85-pt-1hU" secondAttribute="trailing" id="ffL-yF-PrR"/>
+                <constraint firstAttribute="trailing" secondItem="g85-pt-1hU" secondAttribute="trailing" constant="2" id="ffL-yF-PrR"/>
                 <constraint firstAttribute="bottom" secondItem="g85-pt-1hU" secondAttribute="bottom" constant="10" id="iDb-vY-MBr"/>
             </constraints>
             <size key="customSize" width="184" height="152"/>
